# bmstu-3sem-cpp-v1

./: .gitignore  1.one.cpp  1.one_linkfile_header.hpp  10.move.cpp  11.class_prototype.cpp  11.one.hpp  11.two.hpp  12.virtual.cpp  13.cout.cpp  14.events.cpp  15.cast.cpp  16.throw.cpp  17.namespaces.cpp  17.ns.cpp  17.ns.hpp  17.ns_impl.hpp  18.class_one.cpp  19.destructor.cpp  2.two.cpp  2.two_linkfile.cpp  2.two_linkfile_header.hpp  20.operator.cpp  21.templates_v1.cpp  22.sqlite.cpp  23.templates_v2.cpp  24.ret.cpp  3.abstrackClass.cpp  4.set.cpp  5.obj_pointers.cpp  6.wchar.cpp  7.str.cpp  8.cin.cpp  8.cin.txt  9.1.class_stack.cpp  9.1.stack.hpp  9.1.stack_funcs.cpp  9.class_stack.cpp  README.md  makefile
1.cmake_one/: CMakeLists.txt  load  main.cpp
2.cmake-conan/: CMakeLists.txt  CMakeUserPresets.json  conanfile-example.txt  timer.cpp
b0901/: 1.mass.cpp  2.struct.cpp  3.square.cpp  4.sredpoint.cpp  5.crosslines.cpp  makefile
b1001/: 1.1.one.cpp  1.one.cpp  2.class.cpp  3.okr.cpp  4.nasled.cpp  5.virtual.cpp  6.virtual2.cpp  makefile
b1101/: 1.op_overload.cpp  2.matrixes.cpp  makefile
b1201/: 1.list.cpp  2.graf.cpp  3.dat1.txt  3.dat1_zap.txt  3.dat2.txt  3.dat3.txt  3.file_in_out.cpp  4.in_out.cpp  makefile
mysql/: 1.example_(c_cpp_properties).json  1.mysql.cpp  docker-compose.yml  makefile
